; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_SetStrCaseAccordingToBits.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_SetStrCaseAccordingToBits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetStrCaseAccordingToBits(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %42

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @StrLen(i8* %12)
  store i64 %13, i64* %6, align 8
  store i64 0, i64* %5, align 8
  br label %14

14:                                               ; preds = %39, %11
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %42

18:                                               ; preds = %14
  %19 = load i8*, i8** %3, align 8
  %20 = load i64, i64* %5, align 8
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  %22 = load i8, i8* %21, align 1
  store i8 %22, i8* %7, align 1
  %23 = load i64, i64* %4, align 8
  %24 = and i64 %23, 1
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %18
  %27 = load i8, i8* %7, align 1
  %28 = call signext i8 @ToUpper(i8 signext %27)
  store i8 %28, i8* %7, align 1
  br label %32

29:                                               ; preds = %18
  %30 = load i8, i8* %7, align 1
  %31 = call signext i8 @ToLower(i8 signext %30)
  store i8 %31, i8* %7, align 1
  br label %32

32:                                               ; preds = %29, %26
  %33 = load i8, i8* %7, align 1
  %34 = load i8*, i8** %3, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds i8, i8* %34, i64 %35
  store i8 %33, i8* %36, align 1
  %37 = load i64, i64* %4, align 8
  %38 = udiv i64 %37, 2
  store i64 %38, i64* %4, align 8
  br label %39

39:                                               ; preds = %32
  %40 = load i64, i64* %5, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %5, align 8
  br label %14

42:                                               ; preds = %10, %14
  ret void
}

declare dso_local i64 @StrLen(i8*) #1

declare dso_local signext i8 @ToUpper(i8 signext) #1

declare dso_local signext i8 @ToLower(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
